--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_API_BACKEND =http://localhost:5000/api/v1/
+# REACT_APP_API_BACKEND =http://localhost:5000/api/v1/
+REACT_APP_API_BACKEND =https://shop-tok-be.vercel.app/api/v1/
