--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# REACT_APP_API_BACKEND =http://localhost:5000/api/v1/
-REACT_APP_API_BACKEND =https://shoptokbe-production.up.railway.app/api/v1/
+REACT_APP_API_BACKEND =http://localhost:5000/api/v1/
+# REACT_APP_API_BACKEND =https://shoptokbe-production.up.railway.app/api/v1/
