--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.6.1",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.0.3",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
+    "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.4.23",
     "swiper": "^8.4.4",
     "web-vitals": "^2.1.4"
